[gd_scene load_steps=6 format=3 uid="uid://20pj4ni33j5m"]

[ext_resource type="Script" path="res://scenes/main_menu/main_menu.gd" id="1_fi0i8"]
[ext_resource type="FontFile" uid="uid://7y1bjo8b42xe" path="res://assets/fonts/Kenney Pixel Square.ttf" id="2_ojyi6"]
[ext_resource type="FontFile" uid="uid://ehad7l3e4y2d" path="res://assets/fonts/Kenney Pixel.ttf" id="3_w0uvr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_88eor"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xntsw"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fi0i8")
metadata/_edit_lock_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 2
color = Color(0.701961, 0.607843, 0.917647, 1)
metadata/_edit_lock_ = true

[node name="Logo" type="Control" parent="."]
anchors_preset = 0
offset_left = 1.0
offset_top = 42.0
offset_right = 1153.0
offset_bottom = 201.0
metadata/_edit_group_ = true

[node name="LogoWicked" type="RichTextLabel" parent="Logo"]
layout_mode = 0
offset_left = 195.0
offset_top = 11.0
offset_right = 572.0
offset_bottom = 142.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_w0uvr")
theme_override_font_sizes/normal_font_size = 160
bbcode_enabled = true
text = "[center][shake rate=3 level=10][tornado freq=5 radius=5]Wicked"

[node name="LogoJumpers" type="RichTextLabel" parent="Logo"]
layout_mode = 0
offset_left = 558.0
offset_top = 7.0
offset_right = 1028.0
offset_bottom = 177.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_w0uvr")
theme_override_font_sizes/normal_font_size = 160
bbcode_enabled = true
text = "[center][wave amp=50 freq=8 ]Jumpers"

[node name="Buttons" type="Node2D" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons"]
offset_left = 318.0
offset_top = 250.0
offset_right = 794.0
offset_bottom = 532.0
metadata/_edit_group_ = true

[node name="SinglePlayerButton" type="Button" parent="Buttons/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_ojyi6")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_88eor")
metadata/_edit_group_ = true

[node name="PanelContainer" type="PanelContainer" parent="Buttons/VBoxContainer/SinglePlayerButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_xntsw")

[node name="RichTextLabel" type="RichTextLabel" parent="Buttons/VBoxContainer/SinglePlayerButton/PanelContainer"]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme_override_colors/default_color = Color(0.94902, 0.94902, 0.94902, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_ojyi6")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center][wave amp=25 freq=5]C o r r i d a   s o l o"
fit_content = true

[node name="MultiplayerButton" type="Button" parent="Buttons/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_ojyi6")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_88eor")
metadata/_edit_group_ = true

[node name="PanelContainer" type="PanelContainer" parent="Buttons/VBoxContainer/MultiplayerButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_xntsw")

[node name="RichTextLabel" type="RichTextLabel" parent="Buttons/VBoxContainer/MultiplayerButton/PanelContainer"]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme_override_colors/default_color = Color(0.94902, 0.94902, 0.94902, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_ojyi6")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center][wave amp=25 freq=5]M U L T I J O G A D O R"
fit_content = true

[node name="CreditsButton" type="Button" parent="Buttons/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_ojyi6")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_88eor")
metadata/_edit_group_ = true

[node name="PanelContainer" type="PanelContainer" parent="Buttons/VBoxContainer/CreditsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_xntsw")

[node name="RichTextLabel" type="RichTextLabel" parent="Buttons/VBoxContainer/CreditsButton/PanelContainer"]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme_override_colors/default_color = Color(0.94902, 0.94902, 0.94902, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_ojyi6")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center][wave amp=30 freq=4]C R Ã© D I T O S"
fit_content = true

[node name="ExitButton" type="Button" parent="Buttons/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_ojyi6")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_88eor")
metadata/_edit_group_ = true

[node name="PanelContainer" type="PanelContainer" parent="Buttons/VBoxContainer/ExitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_xntsw")

[node name="RichTextLabel" type="RichTextLabel" parent="Buttons/VBoxContainer/ExitButton/PanelContainer"]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme_override_colors/default_color = Color(0.94902, 0.94902, 0.94902, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_ojyi6")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center][wave amp=25 freq=5]S A I R"
fit_content = true

[connection signal="pressed" from="Buttons/VBoxContainer/SinglePlayerButton" to="." method="_on_single_player_button_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/MultiplayerButton" to="." method="_on_multiplayer_button_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
